Add large file with LFS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: 'Helvetica Neue', sans-serif;
-      background-image: url('/Users/macat/Desktop/Git-hub-pages/img/background.jpg'); /* お好きな背景画像に差し替え */
+      background-image: url('img/background.jpg'); /* お好きな背景画像に差し替え */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -90,7 +90,7 @@
 </head>
 <body>
   <!-- 🐱 しっぽ画像 -->
-  <img src="/Users/macat/Desktop/Git-hub-pages/img/tail_cat.png" alt="tail" class="tail">
+  <img src="img/tail_cat.png" alt="tail" class="tail">
 
   <!-- 📄 本文のレイアウト -->
   <div class="overlay">
